# IISI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml
distortion/: eii.py  eup.py  irg.py
docs/: architecture.md
examples/api_demo/: api.py
examples/enterprise_demo/: governed_workflow.py
examples/quickstart/: demo.py
iisi/: pipeline.py
iisi/core/: models.py
iisi/distortion/: __init__.py  engine.py
iisi/stabilization/: __init__.py  core.py
policy_packs/default/: policy.yaml
policy_packs/finance/: policy.yaml
tests/: test_iisi.py
